{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 242,
  "lineage": "900595b9-8144-a7db-c1a3-0f10544cab56",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e793faeb25a34d1",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0ca95b57624ef4857",
            "domain": "vpc",
            "id": "eipalloc-04e793faeb25a34d1",
            "network_border_group": "me-central-1",
            "network_interface": "eni-0d75c1c465b9c60f1",
            "private_dns": "ip-10-0-1-50.me-central-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-29-177-185.me-central-1.compute.amazonaws.com",
            "public_ip": "3.29.177.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dsi_dev_igw",
            "aws_network_interface.webserver_nic",
            "aws_security_group.allow_web",
            "aws_subnet.dsi_dev_subnet-01",
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_prod_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fd1de5f10a3eb14",
            "arn": "arn:aws:ec2:me-central-1:918687400416:instance/i-075d01a342011d568",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075d01a342011d568",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d75c1c465b9c60f1"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d75c1c465b9c60f1",
            "private_dns": "ip-10-0-1-50.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "3.29.177.185",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e611942b7c2219da",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04aa1c44a8e56b9ed",
            "tags": {
              "Name": "TerraformEc2 - My First Project"
            },
            "tags_all": {
              "Name": "TerraformEc2 - My First Project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0685dbe9628c9246b"
            ]
          },
          "dependencies": [
            "aws_network_interface.webserver_nic",
            "aws_security_group.allow_web",
            "aws_subnet.dsi_dev_subnet-01",
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dsi_dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:918687400416:internet-gateway/igw-00817ec3cc2fa0ff8",
            "id": "igw-00817ec3cc2fa0ff8",
            "owner_id": "918687400416",
            "tags": {
              "Name": "dsi-dev igw"
            },
            "tags_all": {
              "Name": "dsi-dev igw"
            },
            "vpc_id": "vpc-0d5d489e2bbaa18de"
          },
          "dependencies": [
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "webserver_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:918687400416:network-interface/eni-0d75c1c465b9c60f1",
            "id": "eni-0d75c1c465b9c60f1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:05:09:e6:6c:08",
            "owner_id": "918687400416",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0685dbe9628c9246b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04aa1c44a8e56b9ed"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.dsi_dev_subnet-01",
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dsi_dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:918687400416:route-table/rtb-08efd444cae946583",
            "id": "rtb-08efd444cae946583",
            "owner_id": "918687400416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00817ec3cc2fa0ff8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dsi-dev rt"
            },
            "tags_all": {
              "Name": "dsi-dev rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5d489e2bbaa18de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dsi_dev_igw",
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_rtsnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058fed5f3b4ddd166",
            "route_table_id": "rtb-08efd444cae946583",
            "subnet_id": "subnet-04aa1c44a8e56b9ed"
          },
          "dependencies": [
            "aws_internet_gateway.dsi_dev_igw",
            "aws_route_table.dsi_dev_rt",
            "aws_subnet.dsi_dev_subnet-01",
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:918687400416:security-group/sg-0685dbe9628c9246b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0685dbe9628c9246b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "918687400416",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d5d489e2bbaa18de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dsi_dev_subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:918687400416:subnet/subnet-04aa1c44a8e56b9ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1",
            "availability_zone_id": "mec1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aa1c44a8e56b9ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "918687400416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf prod public subnet"
            },
            "tags_all": {
              "Name": "tf prod public subnet"
            },
            "vpc_id": "vpc-0d5d489e2bbaa18de"
          },
          "dependencies": [
            "aws_vpc.dsi_dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dsi_dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:918687400416:vpc/vpc-0d5d489e2bbaa18de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4bf183fb9e096e6",
            "default_route_table_id": "rtb-0fde6468552e8488c",
            "default_security_group_id": "sg-06926341c877c8b03",
            "dhcp_options_id": "dopt-0811af747b35d6761",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5d489e2bbaa18de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fde6468552e8488c",
            "owner_id": "918687400416",
            "tags": {
              "Name": "Project VPC tf"
            },
            "tags_all": {
              "Name": "Project VPC tf"
            }
          }
        }
      ]
    }
  ]
}